# echodraft

./: .gitignore  README.md  pyproject.toml  sample.txt
datasets/: drafts.jsonl  triage.jsonl
reports/drafts/: run_2025-08-17_16-36-47.json  run_2025-08-17_16-53-08.json
reports/triage/: run_2025-08-17_16-26-09.json
src/echodraft/: config.py
src/echodraft/agents/: drafter.py  reviser.py
src/echodraft/evaluation/: langsmith_hooks.py  llm_eval.py  metrics.py  run_eval.py  triage_eval.py
src/echodraft/graph/: builder.py  nodes.py  policies.py
src/echodraft/io/: docs.py  prompts.py
src/echodraft/memory/: diff_utils.py  feedback_store.py  review_store.py  style_index.py  style_rules.py  user_profile.py
src/echodraft/ui/: cli.py
tests/: test_graph_smoke.py
